--- a/templates/orders/index.html.twig
+++ b/templates/orders/index.html.twig
@@ -1,39 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Orders index{% endblock %}
 
 {% block body %}
-    <h1>Orders index</h1>
+<body align="center">
+<div align="center" class="order">
+<h1>CHECK ORDER PAGE</h1>
+    <div><div id="cover">
+            <form action="{{ path('find_orders') }}" method="get">
+                <div class="tb">
+                    <div class="td">
+                        <input type="text" name="q" value="" placeholder="Enter Your Number:..." required>
+                        <div class="td" id="s-cover">
+                            <button type="submit">
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+    </div></div>
+{% for order in orders %}
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Price</th>
-                <th>Qty</th>
-                <th>Date</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for order in orders %}
-            <tr>
-                <td>{{ order.id }}</td>
-                <td>{{ order.price }}</td>
-                <td>{{ order.qty }}</td>
-                <td>{{ order.date ? order.date|date('Y-m-d') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_orders_show', {'id': order.id}) }}">show</a>
-                    <a href="{{ path('app_orders_edit', {'id': order.id}) }}">edit</a>
-                </td>
-            </tr>
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="7">no records found</td>
             </tr>
         {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_orders_new') }}">Create new</a>
+</div>
+<body>
 {% endblock %}
