--- a/templates/orders/new.html.twig
+++ b/templates/orders/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Orders{% endblock %}
 
 {% block body %}
+<body align="center">
     <h1>Create new Orders</h1>
 
     {{ include('orders/_form.html.twig') }}
 
     <a href="{{ path('app_orders_index') }}">back to list</a>
+</body>
 {% endblock %}
