--- a/templates/orders/show.html.twig
+++ b/templates/orders/show.html.twig
@@ -1,55 +1,52 @@
-{% extends 'orders/index.html.twig' %}
+{% extends 'base.html.twig' %}
+
+{% block title %}Orders{% endblock %}
 
 {% block body %}
 <body align="center">
-<div align="center" class="order">
-<h1>CHECK ORDER PAGE</h1>
-    <div><div id="cover">
-            <form action="{{ path('find_orders') }}" method="get">
-                <div class="tb">
-                    <div class="td">
-                        <input type="text" name="q" value="" placeholder="Enter Your Number:..." required>
-                        <div class="td" id="s-cover">
-                            <button type="submit">
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-    </div></div>
-</div>
+    <h1>Orders</h1>
+    {% for order in orders %}
     <table class="table" align="center">
-        <thead>
+        <tbody>
+        
             <tr>
                 <th>Id</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Phone</th>
-                <th>Username</th>
-                <th>Password</th>
-                <th>Address</th>
-                <th>actions</th>
+                <td>{{ order.id }}</td>
             </tr>
-        </thead>
-            {% for order in orders %}
-             <tr>
-                <td>{{ customer.id }}</td>
-                <td>{{ customer.name }}</td>
-                <td>{{ customer.email }}</td>
-                <td>{{ customer.phone }}</td>
-                <td>{{ customer.username }}</td>
-                <td>{{ customer.password }}</td>
-                <td>{{ customer.address }}</td>
-                <td>
-                    <a href="{{ path('app_customers_show', {'id': customer.id}) }}">show</a>
-                    <a href="{{ path('app_customers_edit', {'id': customer.id}) }}">edit</a>
-                </td>
-            </tr>
-            {% else %}
             <tr>
-                <td colspan="7">NO ORDER WITH THIS PHONE NUMBER !!</td>
+                <th>Price</th>
+                <td>{{ order.price }}</td>
             </tr>
-            {% endfor %}
+            <tr>
+                <th>Qty</th>
+                <td>{{ order.qty }}</td>
+            </tr>
+            <tr>
+                <th>Date</th>
+                <td>{{ order.date ? order.date|date('Y-m-d') : '' }}</td>
+            </tr>
+            <tr>
+                <th>Address</th>
+                <td>{{ order.address }}</td>
+            </tr>
+            <tr>
+                <th>Fullname</th>
+                <td>{{ order.fullname }}</td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td>{{ order.email }}</td>
+            </tr>
+            <tr>
+                <th>Phone</th>
+                <td>{{ order.phone }}</td>
+            </tr>
+            <tr>
+                <th>Status</th>
+                <td>{{ order.status }}</td>
+            </tr>
+        </tbody>
     </table>
 </body>
+    {% endfor %}
 {% endblock %}
