--- a/templates/orders/index.html.twig
+++ b/templates/orders/index.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Orders{% endblock %}
+{% block title %}Orders Check{% endblock %}
 
 {% block body %}
 <body align="center">
-    <h1>Orders</h1>
+    <h1>Orders Check</h1>
     <div><div id="cover">
             <form action="{{ path('find_orders') }}" method="get">
                 <div class="tb">
