--- a/templates/orders/complete.html.twig
+++ b/templates/orders/complete.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Orders{% endblock %}
+{% block title %}Comeplete !!!{% endblock %}
 
 {% block body %}
     <h1>Edit Orders</h1>
